# mnist_rust

./: About.md  Cargo.toml  README.md
src/: activation.rs  dataset.rs  layer.rs  loss.rs  main.rs  matrix.rs
